Fixed the view on mobile.

--- a/htdocs/css/panel.css
+++ b/htdocs/css/panel.css
@@ -153,12 +153,9 @@ Author: Evan McIlroy <evanmcilroy@gmail.com>*/
 
 @media (max-width:884px){
 
-    .bvl_panel{
-	padding-right: 0px;
-    }
 
-    .panel-wrapper{
-	right: 0px;
+    .active_panel{
+        right: 500px;
     }
 
 }
